--- a/DouYuZB/DouYuZB/Classes/Home/Controller/Home.storyboard
+++ b/DouYuZB/DouYuZB/Classes/Home/Controller/Home.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Zy9-gg-EYV">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,16 +26,16 @@
             </objects>
             <point key="canvasLocation" x="-2473" y="1379"/>
         </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="TGg-0P-cTK">
             <objects>
-                <viewController id="Pdi-u0-KQr" sceneMemberID="viewController">
+                <viewController id="Pdi-u0-KQr" customClass="HomeViewController" customModule="DouYuZB" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="L5R-YB-Jg3"/>
                         <viewControllerLayoutGuide type="bottom" id="GJu-2w-CmE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="dtp-H4-xqr">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
