首页推荐数据

--- a/DouYuZB/DouYuZB/Classes/Home/View/CollectionHeaderView.xib
+++ b/DouYuZB/DouYuZB/Classes/Home/View/CollectionHeaderView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="CollectionHeaderView" customModule="DouYuZB" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -60,6 +60,10 @@
                 <constraint firstItem="Hmo-qT-wcj" firstAttribute="top" secondItem="VXr-Tz-HHm" secondAttribute="top" id="kZu-UR-dMA"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <connections>
+                <outlet property="iconImageView" destination="lYK-tN-BnB" id="HjG-lt-z7J"/>
+                <outlet property="titleLabel" destination="T9d-hl-V6w" id="vZd-in-H5y"/>
+            </connections>
             <point key="canvasLocation" x="34" y="52"/>
         </collectionReusableView>
     </objects>
